<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_tutor_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_tutor_dashboard" />
        <item
            android:id="@+id/nav_tutor_requests"
            android:icon="@drawable/ic_requests"
            android:title="@string/menu_tutor_requests" />
        <item
            android:id="@+id/nav_tutor_sessions"
            android:icon="@drawable/ic_my_classes_tutor"
            android:title="@string/menu_tutor_sessions" />
        <item
            android:id="@+id/nav_tutor_records"
            android:icon="@drawable/ic_recorded_lectures"
            android:title="@string/menu_tutor_records" />
        <item
            android:id="@+id/nav_tutor_messages"
            android:icon="@drawable/ic_messages"
            android:title="@string/menu_tutor_messages" />
        <item
            android:id="@+id/nav_tutor_earnings"
            android:icon="@drawable/ic_earnings_tutor"
            android:title="@string/menu_tutor_earnings" />
        <item
            android:id="@+id/nav_tutor_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_tutor_profile" />
        <item
            android:id="@+id/nav_tutor_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/action_logout" />
    </group>
</menu>